--- a/app/src/main/res/layout/trip_editable_route_item.xml
+++ b/app/src/main/res/layout/trip_editable_route_item.xml
@@ -186,7 +186,7 @@
                         app:divider="@drawable/divider_section_space"
                         app:showDividers="middle">
                         <CheckBox
-                            android:id="@+id/checkBox"
+                            android:id="@+id/checkBoxFlexibleDates"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/flexible"
