--- a/app/src/main/res/layout/activity_trip_detail_completed.xml
+++ b/app/src/main/res/layout/activity_trip_detail_completed.xml
@@ -74,6 +74,7 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/driverCarInfoLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
