--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -76,6 +76,7 @@
                             android:layout_height="match_parent"
                             android:clipToPadding="false"
                             android:visibility="visible"
+                            android:background="@color/transparent_color"
                             tools:itemCount="1"
                             tools:listitem="@layout/rv_driver_side_passengers_item" />
 
