--- a/app/src/main/res/layout/rv_driver_side_passengers_item.xml
+++ b/app/src/main/res/layout/rv_driver_side_passengers_item.xml
@@ -8,8 +8,10 @@
 
     </data>
 
-    <com.google.android.material.card.MaterialCardView style="@style/ElevatedCardViewStyle">
-
+    <com.google.android.material.card.MaterialCardView style="@style/ElevatedCardViewStyle70Percent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/parentView">
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
