--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -462,6 +462,23 @@
         <item name="cardPreventCornerOverlap">false</item>
     </style>
 
+    <style name="ElevatedCardViewStyle70Percent" parent="Widget.Material3.CardView.Elevated">
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!--        <item name="shapeAppearanceOverlay">@style/RoundedCardView</item>-->
+        <item name="cardBackgroundColor">@color/white</item>
+        <item name="strokeColor">@color/transparent_color</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="android:divider">@android:color/transparent</item>
+        <item name="android:dividerHeight">0.0px</item>
+        <item name="android:clipToPadding">false</item>
+        <item name="android:clipChildren">false</item>
+        <item name="cardElevation">@dimen/_6sdp</item>
+        <item name="cardUseCompatPadding">true</item>
+        <item name="cardPreventCornerOverlap">false</item>
+    </style>
+
     <style name="RoundedCardView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/default_rounded_radius</item>
