--- a/app/src/main/res/layout/pickup_location_detail.xml
+++ b/app/src/main/res/layout/pickup_location_detail.xml
@@ -39,6 +39,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvCityName"
                     style="@style/Body_6"
+                    android:visibility="gone"
                     android:text="New York" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
