working on reviews

--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -64,6 +64,7 @@
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/ratingDropDown"
                             style="@style/DropDownStyle"
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true">
@@ -79,6 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:visibility="gone"
                         app:divider="@drawable/divider_default_space"
                         app:showDividers="middle">
 
@@ -86,17 +88,21 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
+                            android:gravity="center"
                             app:divider="@drawable/divider_sub_section_space"
                             app:showDividers="middle">
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 style="@style/HeadLine_1"
+                                android:id="@+id/tvMainAvgRating"
                                 tools:text="4.7" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 style="@style/Body_6"
                                 android:drawableStart="@drawable/ic_star"
-                                tools:text="(256)"
+                                tools:text=""
+                                android:gravity="center"
+                                android:id="@+id/totalNumberOfRating"
                                 android:textColor="@color/secondary_cadet_blue_color" />
 
                         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -123,6 +129,7 @@
 
                                 <com.google.android.material.progressindicator.LinearProgressIndicator
                                     style="@style/LinearProgressIndicator"
+                                    android:id="@+id/tvProgress5"
                                     android:progress="80" />
 
                             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -142,6 +149,7 @@
 
                                 <com.google.android.material.progressindicator.LinearProgressIndicator
                                     style="@style/LinearProgressIndicator"
+                                    android:id="@+id/tvProgress4"
                                     android:progress="70" />
 
                             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -161,6 +169,7 @@
 
                                 <com.google.android.material.progressindicator.LinearProgressIndicator
                                     style="@style/LinearProgressIndicator"
+                                    android:id="@+id/tvProgress3"
                                     android:progress="30" />
 
                             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -180,6 +189,7 @@
 
                                 <com.google.android.material.progressindicator.LinearProgressIndicator
                                     style="@style/LinearProgressIndicator"
+                                    android:id="@+id/tvProgress2"
                                     android:progress="40" />
 
                             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -199,6 +209,7 @@
 
                                 <com.google.android.material.progressindicator.LinearProgressIndicator
                                     style="@style/LinearProgressIndicator"
+                                    android:id="@+id/tvProgress1"
                                     android:progress="20" />
 
                             </androidx.appcompat.widget.LinearLayoutCompat>
