--- a/app/src/main/res/layout/user_detail_item.xml
+++ b/app/src/main/res/layout/user_detail_item.xml
@@ -52,7 +52,8 @@
                             android:layout_width="wrap_content"
                             android:drawableEnd="@drawable/ic_verified_done"
                             android:maxLines="1"
-                            tools:text="Sheraz Ahmad" />
+                            tools:text="" />
+
 
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
@@ -96,6 +97,18 @@
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    >
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/gender"
+                        style="@style/Body_6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        tools:text="" />
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/ltCallInboxSection"
                         android:layout_width="match_parent"
@@ -119,7 +132,7 @@
                             app:srcCompat="@drawable/ic_call" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
-
+                </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
