edit vehicle info in progress

--- a/app/src/main/res/layout/vehicle_info_item.xml
+++ b/app/src/main/res/layout/vehicle_info_item.xml
@@ -61,7 +61,19 @@
                         android:paddingHorizontal="@dimen/_12sdp"
                         android:paddingVertical="@dimen/_3sdp"
                         tools:text="AZY-238"
-                        android:textColor="@color/primary_color" />
+                        android:textColor="@color/primary_color"
+                        android:ellipsize="end"/>
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:id="@+id/editCarInfo"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:layout_weight=".25"
+                        android:src="@drawable/edit_info"
+                        app:tint="@color/on_primary_green_color"
+                        android:visibility="gone">
+
+                    </androidx.appcompat.widget.AppCompatImageButton>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
