--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -223,7 +223,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvReviews"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:clipToPadding="false"
                     android:paddingHorizontal="@dimen/section_space"
                     tools:listitem="@layout/rv_reviews_item" />
