--- a/app/src/main/res/layout/rv_reviews_item.xml
+++ b/app/src/main/res/layout/rv_reviews_item.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:padding="@dimen/imagepicker_padding_small"
             app:divider="@drawable/divider_section_space"
             app:showDividers="middle">
 
